# NeoGroupCaptchaBot

./: .gitignore  .gitmodules  CMakeLists.txt
src/core/: startup.cpp
src/core/manager/: ClientSession.cpp  ClientSession.h  SessionManager.cpp  SessionManager.h
src/utils/: SyncUtils.cpp  SyncUtils.h
src/utils/log/: Log.h
